<resources>
    <string name="app_name">PiggyBank</string>
    <string name="action_settings">Settings</string>
    <string name="history">History</string>
    <string name="in_your_piggybank">In your PiggyBank:</string>
    <string name="operations">Operations</string>
    <string name="submit">Submit</string>
    <string name="depositing">Depositing</string>
    <string name="withdrawing">Withdrawing</string>
    <string name="whats_the_amount">What\'s the amount?</string>
    <string name="amount_hint">10.00</string>
    <string name="whats_the_reason">What\'s the reason?</string>
    <string name="reason_hint">Wanted to buy some Swedish candy...</string>
    <string name="what_are_you_doing">What are you doing?</string>
    <string name="fill_all">Please fill in all fields!</string>
    <string name="please_specify_amount">Please specify the amount!</string>
    <string name="Hi_Chris">Hi Chris!</string>
    <string name="Money">You Currently Have :</string>
    <string name="To_Do">To Do List :</string>
    <string name="My_Goals">My Goals :</string>
    <string name="howmuchihave">How Much I have :</string>
    <string name="howmuchineed">How Much I Need :</string>
    <string name="update">Update</string>
</resources>
