<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="me.gustavs.piggybank.GoalsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rbDepositing"
            android:id="@+id/rgAction">

            <CheckBox
                android:id="@+id/NewPhoneCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Phone" />

            <TextView
                android:id="@+id/howmuchihave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:text="@string/howmuchihave"
                android:textSize="@dimen/text_label" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </RadioGroup>

        <TextView
            android:id="@+id/howmuchineed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin"
            android:text="@string/howmuchineed"
            android:textSize="@dimen/text_label" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin"
            android:text="@string/update"
            android:textSize="@dimen/text_label" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal"
            android:id="@+id/etAmount"/>

        <Button
            android:id="@+id/AddGoalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Goal" />

    </LinearLayout>

</ScrollView>